apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=github test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=github test.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
::warning file=test.js,line=1,endLine=1,col=10,endColumn=13,title=eslint(no-unused-vars)::test.js:1:10: Function 'foo' is declared but never used.
::warning file=test.js,line=1,endLine=1,col=17,endColumn=18,title=eslint(no-unused-vars)::test.js:1:17: Parameter 'b' is declared but never used. Unused parameters should start with a '_'.
::error file=test.js,line=5,endLine=5,col=1,endColumn=10,title=eslint(no-debugger)::test.js:5:1: `debugger` statement is not allowed

Found 2 warnings and 1 error.
Finished in <variable>ms on 1 file with 2 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
