apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=gitlab --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=gitlab --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
[
  {
    "description": "Unused eslint-disable directive (no problems were reported from no-debugger).",
    "check_name": "",
    "fingerprint": "af7269eda042dc42",
    "severity": "major",
    "location": {
      "path": "apps/oxlint/disable-directive.js",
      "lines": {
        "begin": 9,
        "end": 9
      }
    }
  },
  {
    "description": "Unused oxlint-disable directive (no problems were reported from no-debugger).",
    "check_name": "",
    "fingerprint": "18fa9721470f7cf1",
    "severity": "major",
    "location": {
      "path": "apps/oxlint/disable-directive.js",
      "lines": {
        "begin": 12,
        "end": 12
      }
    }
  },
  {
    "description": "Unused oxlint-disable directive (no problems were reported from eslint/no-debugger).",
    "check_name": "",
    "fingerprint": "259b04a3c31b5602",
    "severity": "major",
    "location": {
      "path": "apps/oxlint/disable-directive.js",
      "lines": {
        "begin": 15,
        "end": 15
      }
    }
  }
]----------
CLI result: LintSucceeded
----------
