apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=gitlab ok.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=gitlab ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
[]----------
CLI result: LintSucceeded
----------
